# unflwrs

./: Cargo.toml  Dockerfile  README.md  sqlx-data.json
.github/workflows/: images.yaml
migrations/: 20221103024505_initial_schema.down.sql  20221103024505_initial_schema.up.sql  20221111171924_track_errors.down.sql  20221111171924_track_errors.up.sql  20221126174300_following_tracking.down.sql  20221126174300_following_tracking.up.sql
src/: main.rs
static/css/: unflwrs.css
static/js/: unflwrs.js
templates/: base.html  error.html  export.html  export.txt  feed.html  ff_message.html  home.html
