[package]
name = "unflwrs"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Syfaro <syfaro@huefox.com>"]

[dependencies]
actix-files = "0.6.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = "4.2.1"
askama = "0.11.1"
chrono = "0.4.22"
clap = { version = "4.0.18", features = ["derive", "env"] }
dotenvy = "0.15.6"
egg-mode = "0.16.0"
eyre = "0.6.8"
futures = "0.3.25"
serde = { version = "1.0.147", features = ["derive"] }
sqlx = { version = "0.6.1", features = ["runtime-actix-rustls", "postgres", "macros", "migrate", "chrono", "json", "offline"] }
tokio = "1.21.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
