[package]
name = "unflwrs"
version = "0.2.1"
edition = "2021"
publish = false
authors = ["Syfaro <syfaro@huefox.com>"]

[package.metadata.release]
allow-branch = ["main"]
sign-tag = true

[dependencies]
actix-files = "0.6.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = "4.2.1"
askama = "0.11.1"
bytes = "1.2.1"
chrono = "0.4.22"
clap = { version = "4.0.18", features = ["derive", "env"] }
dotenvy = "0.15.6"
egg-mode = { version = "0.16.0", default-features = false, features = ["rustls_webpki"] }
eyre = "0.6.8"
futures = "0.3.25"
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive"] }
sqlx = { version = "0.6.1", features = ["runtime-actix-rustls", "postgres", "macros", "migrate", "chrono", "json", "offline"] }
tokio = "1.21.2"
tokio-stream = "0.1.11"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
