[package]
name = "unflwrs"
version = "0.3.3"
edition = "2021"
publish = false
authors = ["Syfaro <syfaro@huefox.com>"]

[package.metadata.release]
allow-branch = ["main"]
sign-tag = true

[dependencies]
actix-files = "0.6.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = "4.2.1"
askama = "0.11.1"
async_zip = "0.0.9"
bytes = "1.2.1"
chrono = "0.4.22"
clap = { version = "4.0.18", features = ["derive", "env"] }
csv-async = { version = "1.2.4", default-features = false, features = ["tokio", "with_serde"] }
dotenvy = "0.15.6"
egg-mode = { version = "0.16.0", default-features = false, features = ["rustls_webpki"] }
eyre = "0.6.8"
futures = "0.3.25"
itertools = "0.10.5"
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive"] }
sqlx = { version = "0.6.1", features = ["runtime-actix-rustls", "postgres", "macros", "migrate", "chrono", "json", "offline"] }
tokio = "1.21.2"
tokio-stream = "0.1.11"
tokio-util = { version = "0.7.4", features = ["io", "io-util"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
